# rust-on-esp32

./: .gitignore  readme.md
.github/workflows/: mdbook.yml
blinky/: Cargo.toml
blinky/.cargo/: config.toml
book/: book.toml
hello/: Cargo.toml
hello/.cargo/: config.toml
project_0/: Cargo.toml  readme.md
project_1/: Cargo.toml  readme.md
project_2/: Cargo.toml  readme.md
project_2/.cargo/: config.toml
project_3/: Cargo.toml  readme.md
project_4/: Cargo.toml  readme.md
project_5/: Cargo.toml  readme.md
project_5/.cargo/: config.toml
project_5/assets/: index.html  script.js  style.css
project_5/config/: wifi.txt
project_6/: Cargo.toml  build.rs  readme.md
project_6/.cargo/: config.toml
project_6/assets/: index.html  script.js  style.css
project_6/src/: main.rs
project_7/: Cargo.toml  readme.md
project_7/assets/: index.html  script.js  style.css
project_7/src/: main.rs  wifi.rs
project_8/: Cargo.toml  readme.md
project_8/.cargo/: config.toml
project_8/assets/: index.html  script.js  style.css
project_8/src/: led.rs  lib.rs  main.rs  web.rs  wifi.rs
